--- a/yaml_files/include/StandardModel_SLHA2_postprocessing.yaml
+++ b/yaml_files/include/StandardModel_SLHA2_postprocessing.yaml
@@ -1,65 +1,63 @@
-##########################################################################
-## Defaults for StandardModel_SLHA2 parameters in MSSM scans.
-##
-## Not a top-level configuration file! Instead, import this file, e.g.
-## Parameters:
-##   StandardModel_SLHA2: !import include/StandardModel_SLHA2_scan.yaml
-##
-## These values are as for the default SM params file, but with 3-sigma uncertainty
-## ranges on the alpha_s and m_top values.
-##
-## Values from PDG 2017
-##  # from http://pdg.lbl.gov/2017/mobile/summary-tables/pdf/rpp2017-sum-quarks-m.pdf
-##    (for reference: http://pdg.lbl.gov/2017/reviews/rpp2017-rev-quark-masses.pdf)
-##  & from http://pdg.lbl.gov/2017/tables/rpp2017-sum-leptons.pdf
-##  @ from http://pdg.lbl.gov/2017/reviews/rpp2017-rev-qcd.pdf
-##  ! from http://pdg.lbl.gov/2017/reviews/rpp2017-rev-standard-model.pdf
-##  $ from http://pdg.lbl.gov/2017/reviews/rpp2017-rev-top-quark.pdf
-##
-## If more than one source is listed, values are equal in both sources.
-## Values in GeV where units apply.
-###########################################################################
+# StandardModel_SLHA2 parameters in MSSM postprocessing.
+# import this file into a Parameters node named:
+# StandardModel_SLHA2:
 
 # SLHA1
-alphainv:  1.27950010E+02 # alpha^{-1}(mZ)^MSbar !
-           # range: [127.899, 128.001]
-GF      :  1.16637870E-05 # G_Fermi !
-alphaS  :  # 1.18100000E-01 # alpha_s(mZ)^MSbar @
+alphainv:
   prior_type: none
-mZ      :  9.11876000E+01 # mZ(pole) !
-mBmB    :  4.18000000E+00 # mb(mb)^MSbar #
-mT      :  # 1.73340000E+02 # mtop(pole) $
+alphaS  :
   prior_type: none
-mTau    :  1.77686000E+00 # mtau(pole) &
-mNu3    :               0 # mnu3(pole)
-
+mBmB    :
+  prior_type: none
+mT      :
+  prior_type: none
+GF      :
+  prior_type: none
+mZ      :
+  prior_type: none
+mTau    :
+  prior_type: none
+mNu3    :
+  prior_type: none
 # SLHA2
-mE      :  5.10998946E-04 # melectron(pole) &
-mNu1    :               0 # mnu1(pole)
-mMu     :  1.05658375E-01 # mmuon(pole) &
-mNu2    :               0 # mnu2(pole)
-mD      :  4.70000000E-03 # md(2 GeV)^MSbar #
-mU      :  2.20000000E-03 # mu(2 GeV)^MSbar #
-mS      :  9.60000000E-02 # ms(2 GeV)^MSbar #
-mCmC    :  1.28000000E+00 # mc(mc)^MSbar #
+mD      :
+  prior_type: none
+mU      :
+  prior_type: none
+mS      :
+  prior_type: none
+mCmC    :
+  prior_type: none
+mE      :
+  prior_type: none
+mMu     :
+  prior_type: none
+mNu1    :
+  prior_type: none
+mNu2    :
+  prior_type: none
 
 # CKM
-# Wolfenstein parameterisation (matches SLHA2 VCKMIN block)
-# from http://pdg.lbl.gov/2014/reviews/rpp2014-rev-ckm-matrix.pdf
-CKM_lambda  :  0.22537
-CKM_A       :  0.814
-CKM_rhobar  :  0.117
-CKM_etabar  :  0.353
+CKM_lambda  :
+  prior_type: none
+CKM_A       :
+  prior_type: none
+CKM_rhobar  :
+  prior_type: none
+CKM_etabar  :
+  prior_type: none
 
 # PMNS
-# from     http://pdg.lbl.gov/2014/tables/rpp2014-sum-leptons.pdf
-# see also http://pdg.lbl.gov/2014/reviews/rpp2014-rev-neutrino-mixing.pdf
-# Note: angles given as x = sin^2(2*theta), so I have converted them as:
-# theta = 0.5*arcsin(sqrt(x))
-# CP-violating phases not measured, so I set them to zero.
-theta12 :  0.58376 # solar angle
-theta23 :  0.76958 # atmospheric mixing angle
-theta13 :  0.15495 #
-delta13 :  0       # Dirac CP-violating phase
-alpha1  :  0       # first Majorana CP-violating phase
-alpha2  :  0       # second CP-violating Majorana phase
+theta12 :
+  prior_type: none
+theta23 :
+  prior_type: none
+theta13 :
+  prior_type: none               
+delta13 :
+  prior_type: none
+alpha1  :
+  prior_type: none
+alpha2  :
+  prior_type: none
+ 
