--- a/yaml_files/MSSMEW_rj_pp.yaml
+++ b/yaml_files/MSSMEW_rj_pp.yaml
@@ -9,21 +9,37 @@ Parameters:
   StandardModel_SLHA2: !import include/StandardModel_SLHA2_postprocessing.yaml
 
   nuclear_params_sigmas_sigmal:
-    deltad: -0.427
-    deltas: -0.085
-    deltau: 0.842
-    sigmal: 58
-    sigmas: 43
+    deltad:
+      prior_type: none
+    deltas:
+      prior_type: none
+    deltau:
+      prior_type: none
+    sigmal:
+      prior_type: none
+    sigmas:
+      prior_type: none
   Halo_gNFW_rho0:
-    alpha: 1
-    beta: 3
-    gamma: 1
-    r_sun: 8.5
-    rho0: 0.5
-    rs: 20
-    v0: 240
-    vesc: 533
-    vrot: 240
+
+    alpha:
+      prior_type: none
+    beta:
+      prior_type: none
+    gamma:
+      prior_type: none
+    r_sun:
+      prior_type: none
+    rho0:
+      prior_type: none
+    rs:
+      prior_type: none
+    v0:
+      prior_type: none
+    vesc:
+      prior_type: none
+    vrot:
+      prior_type: none
+
   MSSM11atQ_mA:
     Ad_3:
       prior_type: none
@@ -61,13 +77,13 @@ Printer:
   # Can switch to the ascii printer by commenting out and
   # using the ascii lines below
 
-  # printer: cout
+  printer: cout
 
-  printer: hdf5
-  options:
-    output_file: "MSSMEW.hdf5"
-    group: "/MSSMEW"
-    delete_file_on_restart: false
+  # printer: hdf5
+  # options:
+  #   output_file: "MSSMEW.hdf5"
+  #   group: "/MSSMEW"
+  #   delete_file_on_restart: false
 
   # printer: ascii
   # options:
@@ -103,10 +119,10 @@ Scanner:
       lambdajDE: false
 
     postprocessor:
-      like: LogLike
-      reweighted_like: LogLike
-      update_interval: 100
-      permit_discard_old_likes: true
+      like: LogLike_DM
+      reweighted_like: LogLike_combined
+      update_interval: 40
+      permit_discard_old_likes: false
       # The below don't seem to work?
       # Restrict postprocessing to values greater than this
       # cut_greater_than: {"LogLike": -68.5843} # best fit - 5sigma
@@ -155,64 +171,58 @@ ObsLikes:
 
     # Dark matter likelihoods
     - capability: lnL_oh2
-      purpose:    LogLike
+      purpose:    LogLike_DM
 
     - capability: lnL_FermiLATdwarfs
-      purpose:    LogLike
-
-    - capability: XENON100_2012_LogLikelihood
-      purpose:    LogLike
-
-    - capability: XENON1T_2018_LogLikelihood
-      purpose:    LogLike
+      purpose:    LogLike_DM
 
     - capability: LUX_2016_LogLikelihood
-      purpose:    LogLike
+      purpose:    LogLike_DM
+
+    - capability: XENON1T_2018_LogLikelihood
+      purpose:    LogLike_DM
 
     - capability: PandaX_2016_LogLikelihood
-      purpose:    LogLike
+      purpose:    LogLike_DM
 
     - capability: PandaX_2017_LogLikelihood
-      purpose:    LogLike
-
-    - capability: PICO_2L_LogLikelihood
-      purpose:    LogLike
-
-    - capability: PICO_60_F_LogLikelihood
-      purpose:    LogLike
+      purpose:    LogLike_DM
 
     - capability: PICO_60_2017_LogLikelihood
-      purpose:    LogLike
+      purpose:    LogLike_DM
 
-    - capability: SuperCDMS_2014_LogLikelihood
-      purpose:    LogLike
+    - capability: CRESST_II_LogLikelihood
+      purpose:    LogLike_DM
 
-    - capability: SIMPLE_2014_LogLikelihood
-      purpose:    LogLike
+    - capability: CDMSlite_LogLikelihood
+      purpose:    LogLike_DM
+
+    - capability: DarkSide_50_LogLikelihood
+      purpose:    LogLike_DM
 
     - capability: IC79_loglike
-      purpose:    LogLike
+      purpose:    LogLike_DM
 
-    # Likelihoods for invisible decays of Z and Higgs bosons
-    - purpose: LogLike
-      capability: lnL_Z_inv
+    # # Likelihoods for invisible decays of Z and Higgs bosons
+    # - purpose: LogLike
+    #   capability: lnL_Z_inv
 
-    - purpose: LogLike
-      capability: lnL_Higgs_invWidth
+    # - purpose: LogLike
+    #   capability: lnL_Higgs_invWidth
 
 
-    # Observables (not included in likelihood)
-    - purpose:    Observable
-      capability: LHC_signals
+    # # Observables (not included in likelihood)
+    # - purpose:    Observable
+    #   capability: LHC_signals
 
-    - purpose:    likelihood_details
-      capability: LHC_LogLike_per_SR
+    # - purpose:    likelihood_details
+    #   capability: LHC_LogLike_per_SR
 
-    - purpose:    likelihood_details
-      capability: LHC_LogLike_SR_indices
+    # - purpose:    likelihood_details
+    #   capability: LHC_LogLike_SR_indices
 
-    - purpose:    Observable
-      capability: LHCEventLoopInfo
+    # - purpose:    Observable
+    #   capability: LHCEventLoopInfo
 
     - purpose:    Observable
       capability: RD_oh2
@@ -236,15 +246,15 @@ ObsLikes:
       capability: MSSM_spectrum
       type:       map_str_dbl
 
-    # Observables for invisible decays of Z and Higgs bosons
-    - purpose: Observable
-      capability: Z_gamma_nu
+    # # Observables for invisible decays of Z and Higgs bosons
+    # - purpose: Observable
+    #   capability: Z_gamma_nu
 
-    - purpose: Observable
-      capability: Z_gamma_chi_0
+    # - purpose: Observable
+    #   capability: Z_gamma_chi_0
 
-    - purpose: Observable
-      capability: inv_Higgs_BF
+    # - purpose: Observable
+    #   capability: inv_Higgs_BF
 
 Rules:
 
@@ -562,7 +572,7 @@ KeyValues:
     model_invalid_for_lnlike_below_alt: -1e5
 
   # Set the default output path
-  default_output_path: "runs/MSSMEW/"
+  default_output_path: "runs/MSSMEW_pp_DM/"
 
   # We set the errors from the physics modules to be non-fatal
   # to avoid crashing the entire scan due to a rare problem point.
