--- a/yaml_files/postprocessor_v2.yaml
+++ b/yaml_files/postprocessor_v2.yaml
@@ -35,7 +35,7 @@ Scanner:
 
     postprocessor:
       plugin: postprocessor
-      version: "1.0" 
+      #version: "1.0" 
        # Name of the new global likelihood contribution.
       like: New_LogLike
       # Name of the combined new+old likelihood
@@ -45,7 +45,7 @@ Scanner:
       # Allow overwriting of the old output with the new output (e.g. if you would rather name New_LogLike as LogLike)
       permit_discard_old_likes: false
       update_interval: 1000 # Frequency to print status update message
-      batch_size: 10 # Number of points to distribute to worker processes each time they request more work
+      batch_size: 100 # Number of points to distribute to worker processes each time they request more work
       # The below don't seem to work?
       # Restrict postprocessing to values greater than this
       # cut_greater_than: {"LogLike": -68.5843} # best fit - 5sigma
