--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -330,8 +330,10 @@ endif()
 # Make symbols hidden by default when compiling GAMBIT source files only
 if(${CMAKE_MAJOR_VERSION} MATCHES "2")
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fvisibility=hidden -fvisibility-inlines-hidden")
+  set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -fvisibility=hidden")
 else()
   set(CMAKE_CXX_VISIBILITY_PRESET hidden)
+  set(CMAKE_Fortran_VISIBILITY_PRESET hidden)
   set(CMAKE_VISIBILITY_INLINES_HIDDEN TRUE)
 endif()
 
